# tungus

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  controls.rs  data.rs  helpers.rs  lighting.rs  main.rs  meshes.rs  model.rs  models.rs  rendering.rs  scene.rs  screen.rs  shaders.rs  spatial.rs  systems.rs  textures.rs  utils.rs
src/shaders/: buffer_frag_shader.fs  color_frag_shader.fs  debug_frag_shader.fs  debug_geo_shader.gs  light_frag_shader.fs  object_frag_shader.fs  orange_frag_shader.fs  rainbow_frag_shader.fs  regular_vert_shader.vs  screen_frag_shader.fs  screen_vert_shader.vs  shadow_vert_shader.vs  skybox_frag_shader.fs  skybox_vert_shader.vs  texture_frag_shader.fs  vert_shader.vs  yellow_frag_shader.fs
