[package]
name = "tungus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beryllium = "0.2.0-alpha.4"
bytemuck = "1"
imagine = "0.0.5"
gl33 = { version = "0.2.0" }
glfw = "0.53.0"

[dev-dependencies]
beryllium = "0.2.0-alpha.4"
imagine = "0.0.5"
